tests/paczka1/fuzzy1/99895251.err
Error in line 13: S165 A542 74,8
Error in line 20: oWn9FXNCtI A542 87,2
Error in line 3: 2zHdZ A542 93,0
Error in line 30: S165 S165 15,7
Error in line 36: IaKtBhCym A606 18,4
Error in line 33: S165 A144 5,0
